[package]
name = "oodle-backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
uuid = { version = "1.2.1", features = ["v4"] }
